--- a/views/admin/categorias.handlebars
+++ b/views/admin/categorias.handlebars
@@ -1,3 +1,23 @@
+{{#each erros}}
+    <div class="alert alert-danger">{{texto}}</div>
+    {{else}}
+{{/each}}
+
+
 <h1>Lista de categorias:</h1>
 <hr>
 <a href="/admin/categorias/add"><button class="btn btn-success">Nova categoria</button></a>
+
+{{#each categorias}}
+    <div class="card mt-4">
+        <div class="card-body">
+            <h4>Nome : {{nome}}</h4>
+            <p>Slug : {{slug}}</p>
+            <p>Data de criação {{date}}</p>
+            <br>
+            <a href="/admin/categorias/edit/{{_id}}"><button class="btn btn-success">Editar Categoria</button></a>
+        </div>
+    </div>
+{{else}}
+
+{{/each}}
