--- a/views/admin/categorias.handlebars
+++ b/views/admin/categorias.handlebars
@@ -16,8 +16,12 @@
             <p>Data de criação {{date}}</p>
             <br>
             <a href="/admin/categorias/edit/{{_id}}"><button class="btn btn-success">Editar Categoria</button></a>
+            <form action="/admin/categorias/deletar" method="post">
+                <input type="hidden" name="id" value={{_id}}>
+                <button type="submit" class="btn btn-danger mt-3">Deletar categoria</button>
+            </form>
         </div>
     </div>
 {{else}}
-
+    <h4 class="mt-3">Nenhuma categoria registrada</h4>
 {{/each}}
